# arduino-aoo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties
doc/: architecture.md  desktop-build.md  quickstart.md
examples/: CMakeLists.txt
examples/aoo-receiver/: CMakeLists.txt  aoo-receiver.ino
examples/aoo-sender/: CMakeLists.txt  aoo-sender.ino
examples/aoo-sink/: CMakeLists.txt  aoo-sink.ino
examples/aoo-source/: CMakeLists.txt  aoo-source.ino
examples/tests/log-messages/: CMakeLists.txt  log-messages.ino
examples/tests/loopback/: CMakeLists.txt  loopback.ino
examples/tests/protocols/: CMakeLists.txt  protocols.ino
src/: AOO.h  AOOConfig.h  AOOReceiver.h  AOOReceiverTask.h  AOOSender.h  AOOSink.h  AOOSource.h
src/aoo/: AOOBinMsg.h  AOOBufferView.h  AOOBuffers.h  AOOClockSync.h  AOODriftEstimator.h  AOOMessageHandler.h  AOOPacketRecovery.h  AOOProtocol.h  AOOResampler.h  AOOSourceLine.h  AOOStream.h
